--- a/Family Tree Page 2.html
+++ b/Family Tree Page 2.html
@@ -21,16 +21,61 @@
   </nav>
 
   <form action="Family Tree Page 3.html method=" POST">
-    <section>
-      <label for="Family Name">Family Name</label>
-      <br>
-      <input type="text" name="Family Name" id="Family Name">
-    </section>
-    <section>
-      <h3>Number of Partners</h3>
-      <input id="Number of Partners" name="Number of Partners" type="number" step="1" min="0">
-      <br>
-      <label for="Type of Partner">Type of Partner</label>
+      <section id="Primary in Relationship">
+        <h4>Primary in Relationship</h4>
+        <br>
+        <label for="Family Name">Family Name</label>
+        <br>
+        <input type="text" name="Family Name" id="Family Name">
+        <br>
+        <label for="First Name">First Name</label>
+        <br>
+        <input type="text" name="First Name" id="First Name">
+        <br>
+        <label for="Middle Name">Middle Name</label>
+        <br>
+        <input type="text" name="Middle Name" id="Middle Name">
+        <br>
+        <label for="Sex">Sex</label>
+        <br>
+        <input type="text" name="Sex" id="Sex">
+        <br>
+        <label for="Gender">Gender</label>
+        <br>
+        <input type="text" name="Gender" id="Gender">
+      </section>
+          <section id="Secondary in Relationship">
+            <br>
+          <h3>Number of Partners</h3>
+          <br>
+          <input id="Number of Partners" name="Number of Partners" type="number" value="1" step="0" min="0" max="20">
+          <br>
+          <br>
+          <h4>Secondary in Relationship</h4>
+          <br>
+          <label for="Family Name">Family Name</label>
+          <br>
+          <input type="text" name="Family Name" id="Family Name">
+          <br>
+          <label for="First Name">First Name</label>
+          <br>
+          <input type="text" name="First Name" id="First Name">
+          <br>
+        <label for="Middle Name">Middle Name</label>
+        <br>
+        <input type="text" name="Middle Name" id="Middle Name">
+        <br>
+        <label for="Sex">Sex</label>
+        <br>
+        <input type="text" name="Sex" id="Sex">
+        <br>
+        <label for="Gender">Gender</label>
+        <br>
+        <input type="text" name="Gender" id="Gender">
+        <br>
+        <br>
+        <label for="Type of Partner">Type of Partner</label>
+        <br>
       <select name="Type of Partner" id="Type of Partner">
         <option value="Legal Marriage">Legal Marriage</option>
         <option value="Significant Marriageless Arrangement"> Significant Marriageless Arrangement</option>
