Update Family Tree Page 2.html

--- a/Family Tree Page 2.html
+++ b/Family Tree Page 2.html
@@ -21,6 +21,7 @@
   </nav>
 
   <form action="Family Tree Page 3.html method=" POST">
+    <div class="column">
       <section id="Primary in Relationship">
         <h4>Primary in Relationship</h4>
         <br>
@@ -44,13 +45,15 @@
         <br>
         <input type="text" name="Gender" id="Gender">
       </section>
+    </div>                                              
           <section id="Secondary in Relationship">
-            <br>
+            <div class="column">
+          <br>                     
           <h3>Number of Partners</h3>
           <br>
           <input id="Number of Partners" name="Number of Partners" type="number" value="1" step="0" min="0" max="20">
-          <br>
-          <br>
+            </div>
+        <div class="column">
           <h4>Secondary in Relationship</h4>
           <br>
           <label for="Family Name">Family Name</label>
@@ -72,6 +75,7 @@
         <label for="Gender">Gender</label>
         <br>
         <input type="text" name="Gender" id="Gender">
+        </div>
         <br>
         <br>
         <label for="Type of Partner">Type of Partner</label>
