Update Family Tree Page 2.html

--- a/Family Tree Page 2.html
+++ b/Family Tree Page 2.html
@@ -44,6 +44,17 @@
         <label for="Gender">Gender</label>
         <br>
         <input type="text" name="Gender" id="Gender">
+        <br>
+        <label for="Date of Birth and Where">Date of Birth and Where</label>
+        <br>
+        <input type="date" name="Date of Birth" id="Date of Birth">
+        <br>
+        <input type="text" name="Where" id="where">
+        <br>
+        <label for="Date of Death and Where">Date of Death and Where</label>
+        <br>
+        <input type="date" name="Date of Death" id="Date of Death">
+        <br>
       </section>
     </div>                                              
           <section id="Secondary in Relationship">
@@ -75,6 +86,17 @@
         <label for="Gender">Gender</label>
         <br>
         <input type="text" name="Gender" id="Gender">
+        <br>
+        <label for="Date of Birth and Where">Date of Birth and Where</label>
+        <br>
+        <input type="date" name="Date of Birth" id="Date of Birth">
+        <br>
+        <input type="text" name="Where" id="where">
+        <br>
+        <label for="Date of Death and Where">Date of Death and Where</label>
+        <br>
+        <input type="date" name="Date of Death" id="Date of Death">
+        <br>
         </div>
         <br>
         <br>
