Update Family Tree Page 3.html

--- a/Family Tree Page 3.html
+++ b/Family Tree Page 3.html
@@ -14,7 +14,7 @@
 <nav>
   <ul>
     <li><a href="Family Tree.html">Storage for Family History</a></li>
-    <li><a href="Family Tree Page 2.html">Family Member One</a></li>
+    <li><a href="Family Tree Page 2.html">Family Member</a></li>
   </ul>
 </nav>
 
