--- a/Family Tree.html
+++ b/Family Tree.html
@@ -17,7 +17,7 @@
     <section>
     <nav>
       <ul>
-        <li><a href="Family Tree Page 2.html">Family Member One</a></li>
+        <li><a href="Family Tree Page 2.html">Family Member</a></li>
         <li><a href="Family Tree Page 3.html">Family Details</a></li>
       </ul>
     </nav>
