Update Family Tree Page 2.html

--- a/Family Tree Page 2.html
+++ b/Family Tree Page 2.html
@@ -55,6 +55,7 @@
         <br>
         <input type="date" name="Date of Death" id="Date of Death">
         <br>
+        <input type="text" name="Where" id="where">                               
       </section>
     </div>                                              
           <section id="Secondary in Relationship">
@@ -97,9 +98,11 @@
         <br>
         <input type="date" name="Date of Death" id="Date of Death">
         <br>
+        <input type="text" name="Where" id="where">
         </div>
         <br>
         <br>
+        <h4>Type of Partner</h4>
         <label for="Type of Partner">Type of Partner</label>
         <br>
       <select name="Type of Partner" id="Type of Partner">
