Update Family Tree Page 2.html

--- a/Family Tree Page 2.html
+++ b/Family Tree Page 2.html
@@ -114,6 +114,42 @@
         <option value="Donor">Donor</option>
         <option value="Unknown">Unknown</option>
       </select>
+         <section id="Children">
+      <div class="column">
+        <h4>Children</h4>
+        <br>
+        <label for="Family Name">Family Name</label>
+        <br>
+        <input type="text" name="Family Name" id="Family Name">
+        <br>
+        <label for="First Name">First Name</label>
+        <br>
+        <input type="text" name="First Name" id="First Name">
+        <br>
+        <label for="Middle Name">Middle Name</label>
+        <br>
+        <input type="text" name="Middle Name" id="Middle Name">
+        <br>
+        <label for="Sex">Sex</label>
+        <br>
+        <input type="text" name="Sex" id="Sex">
+        <br>
+        <label for="Gender">Gender</label>
+        <br>
+        <input type="text" name="Gender" id="Gender">
+        <br>
+        <label for="Date of Birth and Where">Date of Birth and Where</label>
+        <br>
+        <input type="date" name="Date of Birth" id="Date of Birth">
+        <br>
+        <input type="text" name="Where" id="where">
+        <br>
+        <label for="Date of Death and Where">Date of Death and Where</label>
+        <br>
+        <input type="date" name="Date of Death" id="Date of Death">
+        <br>
+        <input type="text" name="Where" id="where">
+      </div>
     </section>
   </form>
 
